# RAG-Framework-API

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile_local  README.md  cacert_lam.pem  pyproject.toml  security_scan_PR.yml  swagger.json
.azuredevops/: pull_request_template.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
jmeter/: LamBotsAPI-lambots-accessible.jmx  LamBotsAPI-lambots-chat-completion.jmx  README.md
src/: app.py
src/clients/: __init__.py  constants.py  lifespan.py  metrics_api.py  mongo.py  redis.py  synapse.py
src/clients/azure/: __init__.py  ai_foundry_agent.py  blob.py  openai.py  token_generator.py
src/clients/langfuse/: __init__.py  manager.py  manager_redacted.py  manager_sensitive.py  utils.py
src/core/agents/: __init__.py  utils.py
src/core/base/: __init__.py  _base.py  _document.py  _events.py  _graph.py  _tool.py  utils.py
src/core/bots/: __init__.py  exception_assist_bot.py  followup_questions_generator_bot.py  lambot.py  utils.py
src/core/cache/: decorators.py
src/core/chat/: __init__.py  conversation_engine.py  utils.py
src/core/common/: constants.py  exceptions.py
src/core/context/: vars.py
src/core/database/: __init__.py  tools.py  (+6 more)
src/models/: __init__.py  access_conditions.py  azure_ai_foundry_agent_tool.py  base.py  base_tool_spec.py  citation.py  config.py  constants.py  deep_research.py  intermediate_step.py  logging.py  query_params.py  questions.py  request.py  response.py  retriever_tool.py  security_data.py  sharepoint_tool.py  tool.py  tracing.py  web_search_tool.py
src/routes/: chat_completion.py  chat_completion_external.py  db_routes.py  db_routes_external.py
src/scripts/: add_tools.py  agent_workflow.py  ask_text2sqldi_lambot.py  local_retriever_tool_development.py  pdf_to_markdown.py
(+434 files in other folders)
